[gd_scene load_steps=57 format=2]

[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=2]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SkeletonMovement.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": false,
"name": "GetHit",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 8, 12.5 )

[sub_resource type="CircleShape2D" id=50]
radius = 100.0

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 8.16198, 12.5398 )

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 5
collision_layer = 5
collision_mask = 5
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
frames = SubResource( 48 )
animation = "Walk"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.25, 3.5 )
shape = SubResource( 49 )

[node name="DetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 50 )

[node name="Skeleton" type="Area2D" parent="." groups=[
"Hurtbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton"]
position = Vector2( 4.25, 3.5 )
shape = SubResource( 51 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
[connection signal="area_entered" from="Skeleton" to="." method="_on_Skeleton_area_entered"]
